# financial-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SELF_CORRECTION_PLAN.md  app.py  benchmark_results_v1.md  benchmark_results_v2.md  benchmark_results_v3.md  benchmark_results_v4.md  benchmark_results_v5.md  benchmark_results_v6.md  benchmark_results_v7.md  config.yaml  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  start.bat  start_api.bat
.github/workflows/: test.yml
.streamlit/: config.toml
data/eval/: financial_qa_eval.json
paper/: abstract.md  acknowledgement.md  chapter1.md  chapter2.md  chapter3.md  chapter4.md  chapter5.md  chapter6.md  references.md  thesis.md
scripts/: benchmark.py
src/: __init__.py  config.py  index_builder.py  rag_pipeline.py  utils.py
src/api/: __init__.py  app.py  deps.py  schemas.py
src/cache/: __init__.py  lru_cache.py
src/correction/: __init__.py  external_verifier.py  nli_verifier.py  pipeline.py  retrieval_gate.py  rule_checker.py  types.py
src/embeddings/: siliconflow_embedder.py  zhipu_embedder.py
src/evaluation/: __init__.py  ragas_eval.py
src/generator/: query_rewriter.py  siliconflow_llm.py  zhipu_llm.py
src/loaders/: base_loader.py  pdf_loader.py  qa_loader.py  text_loader.py
tests/: test_api.py  test_async_pipeline.py  test_cache.py  test_embeddings.py  test_evaluation.py  test_hybrid_retriever.py  test_loaders.py  test_metrics.py  test_processor.py  test_query_rewriter.py  test_rag.py  test_reranker.py  test_self_correction.py  test_vectorstore.py
(+26 files in other folders)
