[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "financial-rag"
version = "1.0.0"
description = "金融领域 RAG 知识库问答系统"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "streamlit>=1.28.0",
    "zhipuai>=2.0.0",
    "chromadb>=0.4.22",
    "PyMuPDF>=1.23.0",
    "tiktoken>=0.5.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "rank_bm25>=0.2.2",
    "jieba>=0.42.1",
    "ragas>=0.2.0",
    "datasets>=2.14.0",
    "langchain-openai>=0.1.0",
    "httpx>=0.27.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
    "sse-starlette>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
